<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <EditText
                android:id="@+id/addedItem"
                android:layout_below="@+id/title"
                android:hint="@string/hint_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </EditText>
            <EditText
                android:id="@+id/itemQuantity"
                android:layout_below="@+id/addedItem"
                android:hint="@string/hint_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
            <EditText
                android:id="@+id/itemColor"
                android:layout_below="@+id/itemQuantity"
                android:hint="@string/hint_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
            <EditText
                android:id="@+id/itemSize"
                android:layout_below="@+id/itemColor"
                android:hint="@string/hint_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

            <Button
                android:id="@+id/saveButton"
                android:layout_marginEnd="5dp"
                android:layout_below="@+id/itemSize"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/black"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>