<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="23dp"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:id="@+id/text_alert"
                android:textSize="20sp"
                android:layout_marginBottom="18dp"
                android:layout_centerHorizontal="true"
                android:text="@string/sure_text"
                android:layout_height="wrap_content">




            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no_button"
                android:textSize="15sp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="39dp"
                android:text="@string/no_text"
                >

            </Button>

            <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="15sp"
                android:layout_marginTop="39dp"
                android:background="@color/colorAccent"
                android:text="@string/yes_text"
                android:textColor="@android:color/white">

            </Button>

        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>